# doris-profile

./: .cursorrules  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  debug-parser.js  package.json  run-parser.js  service.sh  test-counter-parsing.js  test-parser.js  test-profile1.txt  test-profile4.txt
.claude/: settings.local.json
backend/: Cargo.toml
backend/config/: ai_config.yaml  default_suggestions.yaml
backend/examples/: sample_profile.txt
backend/src/: constants.rs  lib.rs  main.rs  models.rs  static_files.rs
backend/src/ai/: context_builder.rs  mod.rs  openai_client.rs
backend/src/analyzer/: hotspot_detector.rs  mod.rs  suggestion_engine.rs
backend/src/api/: mod.rs
backend/src/config/: mod.rs
backend/src/diagnostic/: mod.rs  optimization_advisor.rs  performance_bottleneck.rs
backend/src/parser/: composer.rs  error.rs  mod.rs  test_real_profile.rs
backend/src/parser/core/: fragment_parser.rs  mod.rs  operator_parser.rs  section_parser.rs  tree_builder.rs
backend/src/parser/engine/: fragment_parser.rs  operator_parser.rs  section_parser.rs  tree_builder.rs  value_parser.rs
frontend/: package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: AnalysisSummary.vue  (+6 more)
src/: App.tsx
src/hooks/: useProfileParser.ts
src/types/: profile.ts
src/utils/: profileParser.ts
test/: multi-cast-simple.txt  test-profile-1.txt  test-profile-external-3.txt  test-profile-external-full.txt  test-profile-internal-1.txt  test-profile-internal-2.txt  test-profile.txt
(+12 files in other folders)
