[package]
name = "doris-profile-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
rust-embed = "8.0"
mime_guess = "2.0"
clap = { version = "4.4", features = ["derive"] }

